# cpp-demo-20230404

./: .clang-format  .gitignore  CMakeLists.txt  README.MD  build.sh  run.sh
cmake/: deps.cmake
src/: main.cpp
src/demo1/: Stu.cpp  Stu.h  test1.cpp  test1.h  test2.cpp
src/util/: ByteOrder.cpp  ByteOrder.h  FileUtil.hpp
